--- a/index.html
+++ b/index.html
@@ -1,28 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Junz</title>
 </head>
+
 <body>
+    <!-- mother -->
     <div class="container">
+
+        <!-- first child -->
         <div class="nav-bar">
+
+            <h4></h4>
             <nav>
                 <ul>
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Contact me</li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact me</a></li>
+                    <li>My portfolio</li>
                 </ul>
             </nav>
-        </div>
-        <div class="body">
+
+            <!-- grand child -->
             <div>
-                <img src="" alt="">
+
             </div>
-            <div></div>
         </div>
+
+        <!-- second child -->
+        <div class="image--">
+            <img src="449289459_435261736046077_8827714122621250348_n__2_-removebg-preview.png" alt="">
+        </div>
+
+        <div class="text">
+            <h4>Hi my name is GoKU</h4>
+        </div> 
+
+        <div class="text2">
+            <div class="content--in">
+                <div class="image--section">
+                    <img src="img/" alt="">
+                </div>
+                <div class="text--section">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit, vel! Obcaecati nesciunt nihil excepturi dicta eveniet vel magni reprehenderit. Voluptates harum sequi necessitatibus consequuntur nostrum ab totam cum eaque quasi.</p>
+                </div>
+            </div>
+        </div>
+        
     </div>
 </body>
+
 </html>
