--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
     <!-- mother -->
     <div class="container">
 
-        <!-- first child -->
         <div class="nav-bar">
-
-            <h4></h4>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -24,33 +21,18 @@
                     <li>My portfolio</li>
                 </ul>
             </nav>
-
-            <!-- grand child -->
-            <div>
-
-            </div>
         </div>
 
-        <!-- second child -->
-        <div class="image--">
+        <div class="image">
             <img src="449289459_435261736046077_8827714122621250348_n__2_-removebg-preview.png" alt="">
         </div>
 
         <div class="text">
-            <h4>Hi my name is GoKU</h4>
-        </div> 
-
-        <div class="text2">
-            <div class="content--in">
-                <div class="image--section">
-                    <img src="img/" alt="">
-                </div>
-                <div class="text--section">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit, vel! Obcaecati nesciunt nihil excepturi dicta eveniet vel magni reprehenderit. Voluptates harum sequi necessitatibus consequuntur nostrum ab totam cum eaque quasi.</p>
-                </div>
-            </div>
+            <p>
+                Hi i'am junz <br><br>
+                <span>Bachelor of janitor</span>
+            </p>
         </div>
-        
     </div>
 
 </body>
